--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
         "dbMerge": "npx prismix && prisma format",
         "dbMigrateDev": "npx prisma migrate dev --name schema",
         "dbMigrateGenerate": "npx prisma generate",
-        "dbMigrateDeploy": "npx prisma migrate deploy"
+        "dbMigrateDeploy": "npx prisma migrate deploy",
+        "startGateway": "nodemon src/app.ts --trace-warnings",
+        "startSubGraph": "concurrently -k npm:subGraph:*",
+        "subGraph:systemAdmin": "nodemon src/module/system-admin/app.ts"
     },
     "dependencies": {
         "@apollo/gateway": "^2.9.3",
         "@apollo/server": "^4.11.0",
+        "@apollo/subgraph": "^2.9.3",
         "@prisma/client": "^5.21.1",
         "bcrypt": "^5.1.1",
+        "concurrently": "^9.0.1",
         "cors": "^2.8.5",
         "express": "^4.21.1",
-        "graphql": "^16.9.0"
+        "graphql": "^16.9.0",
+        "graphql-tag": "^2.12.6"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.25.8",
