--- a/.env-templates
+++ b/.env-templates
@@ -1,3 +1,14 @@
+PRIVATE_KEY=
+
+PORT_GATEWAY=
+PORT_AUTHENTICATION=
+PORT_SYSTEM_ADMIN=
+PORT_NEWS=
+
+URL_AUTHENTICATION=
+URL_SYSTEM_ADMIN=
+URL_NEWS=
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
