--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "cors": "^2.8.5",
         "express": "^4.21.1",
         "graphql": "^16.9.0",
-        "graphql-tag": "^2.12.6"
+        "graphql-tag": "^2.12.6",
+        "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.25.8",
@@ -33,6 +34,8 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "dotenv": "^16.4.5",
         "prisma": "^5.21.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.3"
